--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 body {
   background-color: var(--background);
-  font-family: "Montserrat", "Avenir";
+  font-family: "Avenir", sans-serif;
 	margin: 0;
 }
 
