Snake game - Refactoring pt2.

--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,20 @@ nav span {
   display: inline-block;
   width: 600px;
 }
+
+
+/* ========== FOOTER STYLING ========== */
+
+footer {
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: var(--main-color);
+}
